crates/macro-tools/tests/ui/deref/fail/empty_args.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
struct Wrapper {
    #[deref()]
    value: String,
}

fn main() {}
