crates/macro-tools/tests/ui/deref/fail/empty_args.stderr
error: empty `#[deref()]` is invalid; use `#[deref]` or `#[deref(mut)]`
 --> tests/ui/deref/fail/empty_args.rs:5:7
  |
5 |     #[deref()]
  |       ^^^^^^^
